Add recipe page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <section>
       <div class="recipe">
-        <a href="#">
+        <a href="/recipe.html">
           <img src="/images/recipe-test.jpg">
           <div class="recipe-container">
             <h4>
