--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="search-container">
         <div class="search">
           <form action="#" id="search">
-            <input class="searct-term" name="q" placeholder="Encontre uma receita..." type="text">
+            <input class="search-term" name="q" placeholder="Encontre uma receita..." type="text" required>
             <input class="search-icon" type="submit">
           </form>
         </div>
@@ -32,99 +32,9 @@
   </header>
 
   <main>
-    <section>
-      <div class="recipe">
-        <a href="/recipe.html">
-          <img src="/images/recipe-test.jpg">
-          <div class="recipe-container">
-            <h4>
-              <span>
-                  Carnes
-              </span> 
-            </h4>
-            <h3>
-              FILÉ DE PEIXE ASSADO COM MOLHO DE CENOURA E PASSAS
-            </h3>
-          </div>
-        </a>
-      </div>
-      <div class="recipe">
-        <a href="#">
-            <img src="/images/recipe-test.jpg">
-            <div class="recipe-container">
-              <h4>
-                <span>
-                    Carnes
-                </span> 
-              </h4>
-              <h3>
-                FILÉ DE PEIXE ASSADO COM MOLHO DE CENOURA E PASSAS
-              </h3>
-            </div>
-          </a>
-      </div>
-      <div class="recipe">
-        <a href="#">
-              <img src="/images/recipe-test.jpg">
-              <div class="recipe-container">
-                <h4>
-                  <span>
-                      Carnes
-                  </span> 
-                </h4>
-                <h3>
-                  FILÉ DE PEIXE ASSADO COM MOLHO DE CENOURA E PASSAS
-                </h3>
-              </div>
-            </a>
-      </div>
-      <div class="recipe">
-        <a href="#">
-                <img src="/images/recipe-test.jpg">
-                <div class="recipe-container">
-                  <h4>
-                    <span>
-                        Carnes
-                    </span> 
-                  </h4>
-                  <h3>
-                    FILÉ DE PEIXE ASSADO COM MOLHO DE CENOURA E PASSAS
-                  </h3>
-                </div>
-              </a>
-      </div>
-      <div class="recipe">
-        <a href="#">
-                  <img src="/images/recipe-test.jpg">
-                  <div class="recipe-container">
-                    <h4>
-                      <span>
-                          Carnes
-                      </span> 
-                    </h4>
-                    <h3>
-                      FILÉ DE PEIXE ASSADO COM MOLHO DE CENOURA E PASSAS
-                    </h3>
-                  </div>
-                </a>
-      </div>
-      <div class="recipe">
-        <a href="#">
-                    <img src="/images/recipe-test.jpg">
-                    <div class="recipe-container">
-                      <h4>
-                        <span>
-                            Carnes
-                        </span> 
-                      </h4>
-                      <h3>
-                        FILÉ DE PEIXE ASSADO COM MOLHO DE CENOURA E PASSAS
-                      </h3>
-                    </div>
-                  </a>
-      </div>
-    </section>
+    <section></section>
   </main>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
