--- a/recipe.html
+++ b/recipe.html
@@ -27,7 +27,10 @@
           <img src="" alt="">
           <h4>PREPARO</h4>
         </div>
-        <div class="box-rendimento"></div>
+        <div class="box-rendimento">
+          <img src="" alt="">
+          <h4>RENDIMENTO</h4>
+        </div>
       </div>
     </div>
 
