Create second view

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
   </header>
 
-  <main>
-    <section></section>
+  <main class="home-container">
+    <section class="home-wrapper"></section>
   </main>
   <script src="/js/index.js"></script>
 </body>
