--- a/recipe.html
+++ b/recipe.html
@@ -17,50 +17,51 @@
     </div>
   </nav>
 
-  <main>
-    <div class="show-recipe-box">
-      <h1>PÃO DE MEL RECHEADO DA ZEQUINHA</h1>
-      <img src="http://img.itdg.com.br/tdg/images/recipes/000/020/722/38649/38649_original.jpg?mode=crop&width=370&height=278"
-        alt="">
-      <div class="info">
-        <div class="box-preparo">
-          <img src="" alt="">
-          <h4>PREPARO</h4>
-        </div>
-        <div class="box-rendimento">
-          <img src="" alt="">
-          <h4>RENDIMENTO</h4>
+  <main class="details-container">
+    <section class="details-wrapper">
+      <div class="show-recipe-box">
+        <h1>PÃO DE MEL RECHEADO DA ZEQUINHA</h1>
+        <img src="http://img.itdg.com.br/tdg/images/recipes/000/020/722/38649/38649_original.jpg?mode=crop&width=370&height=278"
+          alt="">
+        <div class="info">
+          <div class="box-preparo">
+            <img src="" alt="">
+            <h4>PREPARO</h4>
+          </div>
+          <div class="box-rendimento">
+            <img src="" alt="">
+            <h4>RENDIMENTO</h4>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="list-ingredients">
-      <h2>SELECIONE OS INGREDIENTES QUE VC JÁ POSSUI:</h2>
-      <span></span>
-      <ul>
-        <li>
-          <input type="checkbox">500g de açúcar mascavo </input>
-        </li>
-        <li>
-          <input type="checkbox">2 xícaras (chá) de água</input>
-        </li>
-        <li>
-          <input type="checkbox">4 ovos (claras separadas)</input>
-        </li>
-        <li>
-          <input type="checkbox">1/2 colher (chá) de canela em pó</input>
-        </li>
-      </ul>
-      <progress value="22" max="100"></progress>
-      <h3>você possui 15% dos ingredientes</h3>
-      <span></span>
+      <div class="list-ingredients">
+        <h2>SELECIONE OS INGREDIENTES QUE VC JÁ POSSUI:</h2>
+        <span></span>
+        <ul>
+          <li>
+            <input type="checkbox">500g de açúcar mascavo </input>
+          </li>
+          <li>
+            <input type="checkbox">2 xícaras (chá) de água</input>
+          </li>
+          <li>
+            <input type="checkbox">4 ovos (claras separadas)</input>
+          </li>
+          <li>
+            <input type="checkbox">1/2 colher (chá) de canela em pó</input>
+          </li>
+        </ul>
+        <progress value="22" max="100"></progress>
+        <h3>você possui 15% dos ingredientes</h3>
+        <span></span>
 
-      <button>Imprimir lista de ingredientes</button>
+        <button>Imprimir lista de ingredientes</button>
 
-    </div>
-
+      </div>
+    </section>
   </main>
-
+  <script src="/js/recipe.js"></script>
 </body>
 
 </html>
