--- a/recipe.html
+++ b/recipe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <title>Receita Gostosa</title>
@@ -8,60 +8,68 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/recipe.css">
+ <link href="https://fonts.googleapis.com/css?family=Cookie|Lato" rel="stylesheet">
 </head>
 
 <body>
+
   <nav>
     <div class="logo-container">
       <img src="/images/logo.png" alt="logo">
     </div>
   </nav>
 
-  <main class="details-container">
-    <section class="details-wrapper">
-      <div class="show-recipe-box">
-        <h1>PÃO DE MEL RECHEADO DA ZEQUINHA</h1>
-        <img src="http://img.itdg.com.br/tdg/images/recipes/000/020/722/38649/38649_original.jpg?mode=crop&width=370&height=278"
-          alt="">
-        <div class="info">
-          <div class="box-preparo">
-            <img src="" alt="">
+  <main>
+    <div class="card-box">
+      <h1 class="card-main-title">Torta de morango com recheio de mimimi</h1>
+      <img src="http://img.itdg.com.br/tdg/images/recipes/000/020/722/38649/38649_original.jpg?mode=crop&width=370&height=278"
+        alt="">
+      <div class="info">
+        <div class="box-preparo">
+          <img src="" alt="">
+          <div class="card-info">
+            <img src="images/time.png" class="hora">
             <h4>PREPARO</h4>
+            <p>10 MINUTOS</p>
           </div>
-          <div class="box-rendimento">
-            <img src="" alt="">
+          <div class="card-info">
+            <img src="images/serv.png" class="food">
             <h4>RENDIMENTO</h4>
+            <p>08 PORÇÕES</p>
           </div>
         </div>
+        <div class="box-rendimento"></div>
       </div>
+    </div>
 
-      <div class="list-ingredients">
-        <h2>SELECIONE OS INGREDIENTES QUE VC JÁ POSSUI:</h2>
-        <span></span>
-        <ul>
-          <li>
-            <input type="checkbox">500g de açúcar mascavo </input>
-          </li>
-          <li>
-            <input type="checkbox">2 xícaras (chá) de água</input>
-          </li>
-          <li>
-            <input type="checkbox">4 ovos (claras separadas)</input>
-          </li>
-          <li>
-            <input type="checkbox">1/2 colher (chá) de canela em pó</input>
-          </li>
-        </ul>
-        <progress value="22" max="100"></progress>
-        <h3>você possui 15% dos ingredientes</h3>
-        <span></span>
+    <div class="card-box">
+      <h2>SELECIONE OS INGREDIENTES QUE VC JÁ POSSUI:</h2>
+      <span></span>
+      <ul>
+        <li >
+          <input type="checkbox">500g de açúcar mascavo </input>
+        </li>
+        <li >
+          <input type="checkbox">2 xícaras (chá) de água</input>
+        </li>
+        <li >
+          <input type="checkbox">4 ovos (claras separadas)</input>
+        </li>
+        <li >
+          <input type="checkbox">1/2 colher (chá) de canela em pó</input>
+        </li>
+      </ul>
+      <progress value="22" max="100"></progress>
+      <h3>você possui 15% dos ingredientes</h3>
+      <span></span>
 
-        <button>Imprimir lista de ingredientes</button>
+      <button class="botao-lista">Imprimir lista de ingredientes</button>
 
-      </div>
-    </section>
+    </div>
+
   </main>
-  <script src="/js/recipe.js"></script>
+
 </body>
 
 </html>
